set default profile ? maybe

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,9 @@
 spring:
+  profiles:
+    active: "production"
+
+---
+spring:
   profiles: production
   datasource:
     driverClassName: com.mysql.jdbc.Driver
