--- a/pom.xml
+++ b/pom.xml
@@ -38,13 +38,7 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.springframework/spring-websocket -->
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-websocket</artifactId>
-			<version>5.1.8.RELEASE</version>
-		</dependency>
-
+	
 
 		<!--		<dependency>-->
 <!--			<groupId>mysql</groupId>-->
@@ -69,6 +63,14 @@
 			<artifactId>spring-boot-starter-websocket</artifactId>
 			<version>2.1.6.RELEASE</version>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-reactor-netty -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-reactor-netty</artifactId>
+			<version>2.1.6.RELEASE</version>
+		</dependency>
+
 
 
 	</dependencies>
